n-vm-macros/tests/compile_fail/fn_with_params.rs
// SPDX-License-Identifier: Apache-2.0
// Copyright Open Network Fabric Authors

#[n_vm::in_vm]
fn fn_with_params(_x: u32) {}

fn main() {}